Project

General

Profile

Actions

Bug #6625

closed

broken Marshal compatibilities on Complex and Rational

Bug #6625: broken Marshal compatibilities on Complex and Rational

Added by nobu (Nobuyoshi Nakada) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Target version:
ruby -v:
2.0.0
Backport:
[ruby-core:45775]

Description

=begin
(({Complex})) and (({Rational})) dumped by 1.8 or earlier cannot be loaded by trunk.

$ /usr/bin/ruby -v
ruby 1.8.7 (2011-12-28 patchlevel 357) [universal-darwin11.0]

$ ruby -v
ruby 2.0.0dev (2012-06-22 trunk 36175) [universal.x86_64-darwin11]

$ /usr/bin/ruby -rcomplex -e 'Marshal.dump(Complex(0, 0), STDOUT)' | ruby -e 'p Marshal.load(STDIN)'
-e:1:in load': dump format error (ArgumentError) from -e:1:in

'
bash: exit 1

$ /usr/bin/ruby -rrational -e 'Marshal.dump(Rational(0), STDOUT)' | ruby -e 'p Marshal.load(STDIN)'
-e:1:in load': dump format error (ArgumentError) from -e:1:in

'
bash: exit 1

Patch attached.
=end


Files

0001-compatible-marshal-loader.patch (5.6 KB) 0001-compatible-marshal-loader.patch nobu (Nobuyoshi Nakada), 06/22/2012 02:08 PM

Updated by tadf (tadayoshi funaba) about 14 years ago Actions #1 [ruby-core:45791]

  • Priority changed from Normal to 3

should we still support 1.8 dump?

Updated by shyouhei (Shyouhei Urabe) about 14 years ago Actions #2 [ruby-core:45810]

tadf (tadayoshi funaba) wrote:

should we still support 1.8 dump?

Yes please. We no longer need to write old formats, but I still need to read. Otherwise I cannot convert them into new formats.

Updated by tadf (tadayoshi funaba) about 14 years ago Actions #3 [ruby-core:45819]

ok, support forever.

Updated by nobu (Nobuyoshi Nakada) about 14 years ago Actions #4

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r36538.
Nobuyoshi, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


complex.c, rational.c: compatible marshal loader

  • complex.c, rational.c: compatible marshal loader for compatibilities
    with 1.8. [ruby-core:45775] [Bug #6625]
Actions

Also available in: PDF Atom